src/test/run-pass/tuple-struct-trivial.rs
// xfail-test

struct Foo(int, int, int);

fn main() {
}

